# lab1

./: CMakeLists.txt
lab1-1/: CMakeLists.txt  funcs.cpp  funcs.h  lab-1-1.cpp
